--- a/student.css
+++ b/student.css
@@ -244,7 +244,7 @@ body{
 }
   .header3 .show{
     position: absolute;
-    top : 170px;
+    /* top : 170px; */
     place-content: center; /*for making the items center */
     display: flex;
     flex-direction: column;
@@ -342,7 +342,7 @@ body{
     justify-content: space-between;
     align-items: center;
     position: relative;
-    padding: 0 11.45%;
+    padding: 2rem 11.45%;
     gap: 5rem;
     background-image: linear-gradient(90deg, #fff 69%,#fff 1%, #3654D2 30%);
 }
@@ -356,28 +356,23 @@ body{
     font-size: 32px;
     font-style: normal;
     font-weight: 700;
-    line-height: normal;
-    margin-top: 64px;
 } 
 .about_vision{
     color: #4C6BF1;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: 'Plus Jakarta Sans';
-    font-size: 16px;
     font-style: normal;
     font-weight: 600;
-    line-height: normal;
     margin-top: 40px;
 }
 .about_content{
     color: #6D6D6D;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: 'Plus Jakarta Sans';
-    font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 24px;
     margin-top: 16px;
+    font-size: 1rem;
 }
 .about_list{
     margin-left: 20px;
@@ -389,20 +384,16 @@ leading-trim: both;
 text-edge: cap;
 font-feature-settings: 'clig' off, 'liga' off;
 font-family: 'Plus Jakarta Sans';
-font-size: 16px;
 font-style: normal;
 font-weight: 400;
-line-height: 24px; /* 150% */
 }
 
 .about_mission{
     color: #4C6BF1;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: 'Plus Jakarta Sans';
-    font-size: 16px;
     font-style: normal;
     font-weight: 600;
-    line-height: normal;
     margin-top: 40px;
 }
 .about_image{
@@ -414,12 +405,17 @@ line-height: 24px; /* 150% */
 
 } 
 .about_image img{
-    width: 540px;
-    height: 300px;
+    width: calc(32vw);
+    height: calc(20vw);
     border-radius: 1rem;
 }
+@media only screen and (max-width : 1300px){
+    .about_content{
+        font-size: .7rem;
+    }
+}
 
-@media only screen and (max-width : 1350px){
+@media only screen and (max-width : 900px){
     /* .main_content{
         width:max(400px,60vw);
     } */
@@ -433,9 +429,6 @@ line-height: 24px; /* 150% */
         background: #fff;
         height: fit-content;
         flex-direction: column;
-    }
-    .about_content{
-        font-size: 90%;
     }
 }
 #highlight{
@@ -1186,6 +1179,9 @@ text-decoration: none;
     .para_con, #link_external{
         font-size: .9rem;
     }
+    .header3 div p{
+        left: 5%;
+    }
   }
   @media only screen and (max-width:850px) {
     .content-transition ,.about_us, .main{
@@ -1197,6 +1193,9 @@ text-decoration: none;
     }
     .para_con, #link_external{
         font-size: .8rem;
+    }
+    .header3 div p{
+        left: 2%;
     }
   }
 
