Photos and Some Clubs added
New Photos And Clubs Pages Added.

--- a/ABOUT.css
+++ b/ABOUT.css
@@ -880,7 +880,7 @@ line-height: 24px; /* 150% */
     line-height: normal;
 }
 .lim{
-    background-image: url(Rectangle\ 69.png);
+    background-image: url(https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMAGES%2F1R9A2726.JPG?alt=media&token=e1dcc3db-6c7e-46e7-aaca-31f940fce0ac);
     margin-top: 1.5rem;
     width: 540px;
     height: 313px;
