--- a/Admission.css
+++ b/Admission.css
@@ -201,7 +201,7 @@ body{
 
 }
 .camp{
-    background-image: url(aitcampbanner.jpg);
+    background-image: url(./assets/home/aitcampus.jpg);
     background-size:cover;
     width: 100%;
     height: 401px;
