--- a/ResearchCommon.css
+++ b/ResearchCommon.css
@@ -222,7 +222,7 @@ body{
 
   /*-----------------------------------------------------------------------------------------------------------*/
   .header3{
-    background: url("./aitcampbanner.jpg") no-repeat;
+    background: url("./assets/home/aitmain.jpg") no-repeat;
     background-size:cover;
     background-position: center;
 
