--- a/collage.css
+++ b/collage.css
@@ -564,6 +564,8 @@ nav bar and first section complete
   border: 1px solid #FFF;
   padding-left: 0.2rem;
   padding-right: 0.2rem;
+  border-radius: 0.3rem;
+
 }
 
 /* ////////////////////////////////////////////////////////////////////////////////////////////// */
