--- a/collage.css
+++ b/collage.css
@@ -273,7 +273,8 @@ body {
   background: url("./assets/home/aitmain.jpg") no-repeat;
 }
 .slide3{
-  background: url("./assets/home/b.png") no-repeat;
+  background: url("./assets/home/b.jpg") no-repeat;
+  
 }
 
 /* --------------------- */
