--- a/IT.css
+++ b/IT.css
@@ -2698,6 +2698,8 @@ padding: 10px;
         height: 400px;
     }
     .about_us{
+        width:90%;
+        margin: auto;
         margin-top: 50px;
     }
     .ab{
