--- a/collage.css
+++ b/collage.css
@@ -975,11 +975,19 @@ hr{
   margin-top: 1rem;
   opacity: 0.7;
 }
+.footlist a{
+  text-decoration: none;
+  color: #fff;
+}
 .footsocialimg{
   display: flex;
   justify-content: space-between;
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+.footsocialimg a{
+  text-decoration: none;
+  color: #fff;
 }
 .copyright{
   background-color: #0C2695;
