--- a/IT.css
+++ b/IT.css
@@ -2698,8 +2698,6 @@ padding: 10px;
         height: 400px;
     }
     .about_us{
-        width:90%;
-        margin: auto;
         margin-top: 50px;
     }
     .ab{
@@ -3340,16 +3338,13 @@ padding: 1.5rem;
     .contact_con2{
         width: 100%;
     }
-    #director_pic{
-        text-align: center;
-    }
 }
 /* ---------------------------------------------Admistration---------------------------------------------------------- */
 .items ul{
     margin-left: 1.2rem;
 }
 #director_pic{
-    margin-top: 2.4rem;
+    margin-top: 2.8rem;
 }
 #items_list li{
     margin-left: 1rem;
@@ -3372,10 +3367,10 @@ padding: 1.5rem;
     overflow: hidden;
 }
 #jd_pic img{
-    left: 5px;
+    
     width: 100px;
     top: 32px;
-    transform: scale(4);
+    transform: scale(1.5);
     position: absolute;
 }
 @media screen and (max-width:700px){
@@ -3397,11 +3392,7 @@ padding: 1.5rem;
     font-size: 1rem;
 }
 #jd_pic img{
-    right: -2px;
-}
-#jd_pic2{
-    flex-wrap: wrap;
-    justify-content: center;
+    right: -14px;
 }
 }
 /* ////////////////////////////////////////////////////////////////////////////////////// */
@@ -3596,8 +3587,6 @@ line-height: 1.25rem; /* 125% */
     }
 }
 /* --------------------------------------------------------ALUMNI--------------------------------------------- */
-
-
 .alumini_content_heading{
     color: #0C2695;
 leading-trim: both;
@@ -3623,7 +3612,6 @@ margin-bottom: 30px;
     text-align: justify;
     font-weight: 500;
 }
-
 @media screen and (max-width:700px){
     .alumini_content_heading{
         font-size: 1.5rem;
@@ -3641,7 +3629,7 @@ margin-bottom: 30px;
     .alumini_content p{
         text-align: justify;
         font-size: 0.8rem;
-    }   
+    }
 }
 /* ------------------------------------------------------CAR CUT SECTION--------------------------------------------- */
 .description_contain h3{
@@ -4258,3 +4246,220 @@ input:checked ~ #faq7 ~ div.p{
 #myTable a{
     color: #000;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.footer{
+    display: flex;
+    justify-content: center;
+    color: #fff;
+    background-color: #0C2695;
+  }
+  
+  .footer .left{
+    width: 300px;
+    padding: 50px 0px;
+    text-align: center;
+    font-size: 14px;
+  }
+  .footerCollegeinfo{
+    margin: 10px;
+    font-size: 16px;
+  }
+  .infolist{
+    margin: 10px;
+  }
+  .infolist span{
+    margin: 10px;
+  }
+  .footer .right{
+    width: 70%;
+    padding: 50px 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+  
+  .footer .right div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .footer .right a{
+    text-decoration: none;
+    color: #fff;
+    font-weight: normal;
+  }
+  
+  .footer hr{
+    width: 4px;
+    background-image: linear-gradient(#eeeeee00, #fff, #eeeeee00);
+    border: 0;
+  }
+  .g20_image{
+    margin: 20px 20px;
+    box-sizing: border-box;
+    overflow: hidden;
+    border-radius: 4px;
+    height: 150px;
+    width: 262px;
+    margin-top: 20px;
+    
+  }
+  
+  hr{
+    margin: 2px;
+  }
+  .gps_image{
+    box-sizing: border-box;
+    margin: auto 20px;
+    margin-top: 40px\;;
+    overflow: hidden;
+    border-radius: 4px;
+    height: 150px;
+    width: 262px;
+  }
+  
+  
+  /* Footer */
+  .footer1{
+    background-color: #3C5ADA;
+    padding: 60px 10%;
+    display: flex;
+    color: #fff;
+    /* justify-content: space-between; */
+    gap: 4.5%;
+    flex-wrap: wrap;
+  }
+  .footadd1{
+    display: flex;
+    
+  }
+  .footadd1 img{
+    height:50px;
+     /* width:50px; */
+  }
+  .imgcont{
+    font-size: 1.2rem;
+    font-weight: 600;
+    width: 170px;
+    margin-left: 0.5rem;
+  }
+  .foothead{
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    text-decoration-line: underline;
+  }
+  #foothead1{
+    margin-top: 25px;
+  }
+  .foothead2{
+    font-size: 14px;
+  }
+  .footcontact{
+    display: flex;
+    margin-top: 10px;
+    gap: 0.5rem;
+  }
+  
+  .footlist{
+    font-size: 14px;
+    font-weight: 300;
+    margin-top: 1rem;
+    opacity: 0.7;
+  }
+  .footlist a{
+    text-decoration: none;
+    color: #fff;
+  }
+  .footsocialimg{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+  .footsocialimg a{
+    text-decoration: none;
+    color: #fff;
+  }
+  .copyright{
+    background-color: #0C2695;
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+    font-weight: lighter;
+    padding: 10px;
+  }
+  
+  .fa-brands{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+  /* Footer End */
+  
+  @media only screen and (max-width: 800px) {
+    .footer{
+      flex-direction: column;
+      gap:100px;
+    }
+    .footer .left{
+      width: 100%;
+    }
+    .footer .right{
+      flex-direction: column;
+      text-align: center;
+      width: 100%;
+    }
+    .footer hr{
+      height: 5px;
+      width: 100%;
+      background-image: linear-gradient(90deg,#eeeeee00, #fff, #eeeeee00);
+    }
+  .links{
+    display: flex;
+    flex-direction: column;
+  }
+  .importantLinks .row{
+    width: 100px;
+    margin: 10px auto;
+  }
+  .footer_image{
+    margin:auto;
+  }
+  
+  .footer1{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  .footcontact{
+    /* flex-direction: column; */
+    justify-content: center;
+  
+  }
+  .foothead{
+    margin-top: 1.4rem;
+    text-decoration-line: underline;
+  }
+  .footlist{
+    margin-top: 10px; 
+  }
+  .foothead2{
+    font-size: 14px;
+    font-weight: 300;
+    opacity: 0.7;
+  }
