--- a/IT.css
+++ b/IT.css
@@ -365,6 +365,7 @@ body{
     font-weight: 400;
     line-height: 24px;
     margin-top: 16px;
+    text-align: justify;
 }
 .about_list{
     margin-left: 20px;
@@ -2708,6 +2709,7 @@ padding: 10px;
     .about_content{
         margin: 0px auto;
         width: auto;
+        text-align: justify;
     }
     .about_vision,.about_mission{
         margin: 20px 0 10px 0;
