padding after merge IT.css

--- a/IT.css
+++ b/IT.css
@@ -426,6 +426,7 @@ line-height: 24px; /* 150% */
     gap: 1.88rem;
     padding: 0 11.45%;
     margin-top: 7%;
+    margin-bottom: 7%;
 }
 .jd_table{
     min-width: 250px;
