--- a/IT.css
+++ b/IT.css
@@ -28,7 +28,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    min-height: 80px;
+    height: 80px;
     /* width: 77.10%;  */  /* not required*/
     transition: 0.80s;
     align-items: center;
@@ -4465,4 +4465,10 @@ input:checked ~ #faq7 ~ div.p{
     font-weight: 300;
     opacity: 0.7;
   }
+  .Departments .top .bluebar, .about .content .bluebar{
+  display: none;
+} 
+.bluebarb{
+  display: flex;
+}
   }
