--- a/student.css
+++ b/student.css
@@ -1737,4 +1737,10 @@ text-decoration: none;
     font-weight: 300;
     opacity: 0.7;
   }
+.Departments .top .bluebar, .about .content .bluebar{
+  display: none;
+} 
+.bluebarb{
+  display: flex;
+}
 }
