--- a/collage.css
+++ b/collage.css
@@ -277,19 +277,6 @@ body {
 }
 
 /* --------------------- */
-button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 20px;
-  background: transparent;
-  border: none;
-  color: #fff;
-  cursor: pointer;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-}
 
 #prevBtn {
   z-index: 2;
@@ -338,6 +325,19 @@ button {
   font-weight: bolder;
   padding-top: 25px;
   border-radius: 20px 20px 0px 0px;
+}
+
+.first button{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+  background: transparent;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
 }
 
 .first div .b{
@@ -756,7 +756,7 @@ p{
   transition: transform 0.5s ease-in-out;
 }
 
-button {
+.campus button {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
