--- a/IT.css
+++ b/IT.css
@@ -4348,10 +4348,25 @@ input:checked ~ #faq7 ~ div.p{
     padding: 60px 10%;
     display: flex;
     color: #fff;
-    /* justify-content: space-between; */
-    gap: 4.5%;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    /* gap: 4.5%; */
+    /* flex-wrap: wrap; */
   }
+
+  .footvideo{
+    width: 100%;
+    height:8rem;
+  }
+  
+  .footerCon2{
+    /* margin-left: 2rem; */
+    margin-right: 2rem;
+  }
+  .footaddress{
+    margin-right: 2rem;
+  }
+  
+
   .footadd1{
     display: flex;
     
@@ -4479,4 +4494,32 @@ input:checked ~ #faq7 ~ div.p{
 .bluebarb{
   display: flex;
 }
+  }
+
+  @media only screen and (max-width: 950px) {
+    .footer1{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+    }
+    .footcontact{
+      /* flex-direction: column; */
+      justify-content: center;
+    
+    }
+    .foothead{
+      margin-top: 1.4rem;
+      text-decoration-line: underline;
+    }
+    .footlist{
+      margin-top: 10px; 
+    }
+    .foothead2{
+      font-size: 14px;
+      font-weight: 300;
+      opacity: 0.7;
+    }
+    
   }
