--- a/collage.css
+++ b/collage.css
@@ -933,13 +933,16 @@ hr{
   padding: 60px 10%;
   display: flex;
   color: #fff;
-  /* justify-content: space-between; */
-  gap: 4.5%;
-  flex-wrap: wrap;
+  justify-content: space-between;
+  /* gap: 4.5%; */
+  /* flex-wrap: wrap; */
 }
 .footadd1{
   display: flex;
   
+}
+.footaddress{
+  margin-right: 2rem;
 }
 .footadd1 img{
   height:50px;
@@ -1001,6 +1004,16 @@ hr{
 .fa-brands{
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.footvideo{
+  width: 100%;
+  height:8rem;
+}
+
+.footerCon2{
+  /* margin-left: 2rem; */
+  margin-right: 2rem;
 }
 /* Footer End */
 
@@ -1065,4 +1078,32 @@ hr{
 .bluebarb{
   display: flex;
 }
+}
+
+@media only screen and (max-width: 950px) {
+  .footer1{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  .footcontact{
+    /* flex-direction: column; */
+    justify-content: center;
+  
+  }
+  .foothead{
+    margin-top: 1.4rem;
+    text-decoration-line: underline;
+  }
+  .footlist{
+    margin-top: 10px; 
+  }
+  .foothead2{
+    font-size: 14px;
+    font-weight: 300;
+    opacity: 0.7;
+  }
+  
 }
