--- a/student.css
+++ b/student.css
@@ -1478,9 +1478,9 @@ text-decoration: none;
     padding: 60px 10%;
     display: flex;
     color: #fff;
-    /* justify-content: space-between; */
-    gap: 4.5%;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    /* gap: 4.5%; */
+    /* flex-wrap: wrap; */
   }
   .footadd1{
     display: flex;
@@ -1612,13 +1612,25 @@ text-decoration: none;
     padding: 60px 10%;
     display: flex;
     color: #fff;
-    /* justify-content: space-between; */
-    gap: 4.5%;
-    flex-wrap: wrap;
+    justify-content: space-between;
+    /* gap: 4.5%; */
+    /* flex-wrap: wrap; */
   }
+
+  .footvideo{
+    width: 100%;
+    height:8rem;
+  }
+  .footerCon2{
+    /* margin-left: 2rem; */
+    margin-right: 2rem;
+  }
+  .footaddress{
+    margin-right: 2rem;
+  }
+  
   .footadd1{
     display: flex;
-    
   }
   .footadd1 img{
     height:50px;
@@ -1683,6 +1695,7 @@ text-decoration: none;
   }
   /* Footer End */
   
+
   @media only screen and (max-width: 800px) {
     .footer{
       flex-direction: column;
@@ -1744,3 +1757,33 @@ text-decoration: none;
   display: flex;
 }
 }
+
+  }
+
+  @media only screen and (max-width: 950px) {
+    .footer1{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+    }
+    .footcontact{
+      /* flex-direction: column; */
+      justify-content: center;
+    
+    }
+    .foothead{
+      margin-top: 1.4rem;
+      text-decoration-line: underline;
+    }
+    .footlist{
+      margin-top: 10px; 
+    }
+    .foothead2{
+      font-size: 14px;
+      font-weight: 300;
+      opacity: 0.7;
+    }
+    
+  }
