--- a/collage.css
+++ b/collage.css
@@ -62,18 +62,6 @@ body {
   font-size: 16px;
 }
 
-/* */
-@media only screen and (max-width:1000px){
-  .header, .topper{
-    padding: 0px 5%;
-  }
-}
-@media only screen and (max-width:850px){
-  .header, .topper{
-    padding: 0px 2%;
-  }
-}
-
 /* header nav */
 
 .header nav {
@@ -146,6 +134,19 @@ body {
     font-size: 0.8rem;
     margin: 10px 15px;
     font-weight: 500;
+}
+
+/*media query for header */
+@media only screen and (max-width:1150px){
+  .header, .topper{
+    padding: 0px 2%;
+  }
+}
+@media only screen and (max-width:900px){
+  .header, .topper{
+    padding: 0px 1%;
+    gap:0;
+  }
 }
 
 /* ------------------------ */
