--- a/ResearchCommon.css
+++ b/ResearchCommon.css
@@ -437,7 +437,7 @@ line-height: 24px; /* 150% */
     display: flex;
     gap: 1.88rem;
     padding: 0 11.45%;
-    margin-top: 7%;
+    margin: 7% 0;
 }
 
 .jd_table{
