changes in copyright

--- a/collage.css
+++ b/collage.css
@@ -999,7 +999,7 @@ hr{
 .copyright{
   background-color: #0C2695;
   color: #fff;
-  font-size: 14px;
+  font-size: 0.85rem;
   text-align: center;
   font-weight: lighter;
   padding: 10px;
