--- a/IT.css
+++ b/IT.css
@@ -4423,7 +4423,7 @@ input:checked ~ #faq7 ~ div.p{
   .copyright{
     background-color: #0C2695;
     color: #fff;
-    font-size: 14px;
+    font-size: 0.85rem;
     text-align: center;
     font-weight: lighter;
     padding: 10px;
