--- a/student.css
+++ b/student.css
@@ -1542,7 +1542,7 @@ text-decoration: none;
   .copyright{
     background-color: #0C2695;
     color: #fff;
-    font-size: 14px;
+    font-size: 0.85rem;
     text-align: center;
     font-weight: lighter;
     padding: 10px;
