--- a/ResearchCommon.css
+++ b/ResearchCommon.css
@@ -754,7 +754,7 @@ text-decoration-line: underline;
 }
 .hod_text{
     width: 842px;
-    height: 796px;
+    height: auto;
     margin-top: 30px;
     font-size: 1rem;
 }
